# bangkok_hack

./: .gitignore  README.md  ai_agent.py  app.jsx  app.py  audio_transcriptor.py  index.html  recorder_2.py  recoreder.py  transaction_parsing_agent.py  zk_recoreder.py
beckend/: .gitignore  app.py  hardhat.config.js  hyperbolic_parsing_agent.py  nlp_parsing.py  output.json  sendTx.js  transaction_parsing_agent.py  voice_print.py
interaction-with-chain/: hardhat.config.js  output.json  package-lock.json  package.json  sendTx.js
zero_knowledge_proof/: Cargo.toml  proof.json  verification_key.json  video_process.json
zero_knowledge_proof/src/: generate_circom.rs  main.rs
