[package]
name = "plonky2_project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
rand = { version = "0.8.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
plonky2 = "0.2.2"
log = "0.4"
plonky2_util = { git = "https://github.com/polymerdao/plonky2", rev = "4cb0b48df1d227d5461a4c28ed025aaea64e2e62" }
